<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:text="@string/text6"
            android:layout_marginStart="25sp"
            android:textColor="#080F8C"
            android:textSize="40sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/image" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:textAlignment="center" />

    <View
        android:layout_width="10dp"
        android:layout_height="10dp">

    </View>

    <EditText
        android:layout_width="329dp"
        android:layout_height="40sp"
        android:layout_marginStart="20dp"
        android:autofillHints="Gaurav"
        android:background="#E1DEDE"
        android:hint="@string/text4"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:cornerRadius="15dp">

    </EditText>

    <Button

        android:id="@+id/Btn"
        android:layout_width="250dp"
        android:layout_height="60sp"
        android:layout_marginStart="34dp"
        android:backgroundTint="#7C2B2BC5"
        android:paddingStart="14dp"
        android:paddingEnd="0sp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#F6F7FA"
        app:cornerRadius="11sp">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/Get_help_with_signing_in"
            android:textAlignment="center"
            app:cornerRadius="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:backgroundTint="#3EFBFBFB"
                android:fontFamily="sans-serif-medium"
                android:text="@string/text1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#0E34A3"
                android:textSize="12sp"
                app:cornerRadius="15sp"

                app:iconTint="#FF9800">

            </Button>

            <Button
                android:id="@+id/second_act_btn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:backgroundTint="#75F8F7F7"
                android:text="@string/text2"
                android:textColor="#0E34A3"
                android:textColorHighlight="#BD1B1B"
                android:textSize="12sp"
                app:cornerRadius="15sp"
                >

            </Button>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>