<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"



    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:text="@string/text6"
            android:textColor="#080F8C"
            android:textSize="40sp"
            android:textStyle="bold" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text5"
            android:textAlignment="center" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"></View>

        <EditText
            android:layout_width="329dp"
            android:layout_height="wrap_content"

            android:background="#EB7E04BF"
            android:backgroundTint="#FAF8F8"
            android:hint="@string/text4"
            android:textAlignment="center"></EditText>

        <Button
            android:id="@+id/b1"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#7CFBFAFA"
            android:layout_marginStart="34dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#0E34A3"></Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:text="@string/Get_help_with_signing_in"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <Button
                    android:id="@+id/b2"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:backgroundTint="#3EFBFBFB"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/text1"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0E34A3"
                    android:textSize="17sp"
                    app:iconTint="#FF9800"></Button>

                <Button
                    android:id="@+id/b3"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#EFF1F1"
                    android:text="@string/text2"
                    android:textColor="#0E34A3"
                    android:textColorHighlight="#BD1B1B"
                    android:textSize="17sp"></Button>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>